--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
             <a href="https://vishnunetha.github.io/varmtechnology/"><img src="play.png" class="play-btn">Watch Tutorials</a>
         </div>
         <div class="col-md-6 text-center">
-          <img src="home.PNG" class="img-fluid">
+          <img src="home.png" class="img-fluid">
         </div>
       </div>
 
