--- a/index.html
+++ b/index.html
@@ -161,7 +161,7 @@
         <div class="container">
           <div class="row">
             <div class="col-md-4 footer-box">
-              <h3>Programmers Hub /></h3>
+              <b>Programmers Hub /></b>
               <p>Programmers Hub is a website to quickly access programming manuals for more than a dozen different languages, including Python,
                  Assembly, HTML, VB.NET, C, C++, C# (C Sharp), JavaScript, PHP, Ruby, CSS, Java, and many more.</p>
             </div>
