--- a/index.html
+++ b/index.html
@@ -120,7 +120,7 @@
       <!--------------------------------------- testimonials -------------------------------------->
       <section id="testimonials">
         <div class="container">
-          <h1 class="title text-center">WHAT CLIENTS SAY ?</h1>
+          <h1 class="title text-center">TESTIMONIALS</h1>
           <div class="row offset-1">
             <div class="col-md-5 testimonials">
              <p> Our main goal is to improve the programming skills in a competitive way by providing the quality lectures, challenges and the tools required 
@@ -162,7 +162,7 @@
         <div class="container">
           <div class="row">
             <div class="col-md-4 footer-box">
-              <b>Programmers Hub /></b>
+              <b>Programmers Hub /></b><br>
               <p>Programmers Hub is a website to quickly access programming manuals for more than a dozen different languages, including Python,
                  Assembly, HTML, VB.NET, C, C++, C# (C Sharp), JavaScript, PHP, Ruby, CSS, Java, and many more.</p>
             </div>
