--- a/index.html
+++ b/index.html
@@ -183,7 +183,7 @@
         
         </div>
         <hr>
-        <p class="copyright">website creatred by vivek & co</p>
+        <p class="copyright">website creatred by vivek</p>
       </section>
       
     </body>
